--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "node --test"
+    "test": "node --test",
+    "build": "rollup index.js --file index.cjs --format cjs --generatedCode=es2015 --compact --banner \"// DO NOT EDIT DIRECTLY\" --sourcemap"
   },
   "type": "module",
   "exports": {
